// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form rendering 1`] = `
<div
  className="form"
>
  <form
    onSubmit={[Function]}
  >
    <textarea
      autoFocus={true}
      name="expr"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="translate(Enter regular expression to display)"
    />
    <button
      type="submit"
    >
      <Trans>
        Display
      </Trans>
    </button>
    <div
      className="select"
    >
      <select
        name="syntax"
        onChange={[Function]}
        value="js"
      >
        <option
          key="js"
          value="js"
        >
          Javascript
        </option>
        <option
          key="pcre"
          value="pcre"
        >
          PCRE
        </option>
      </select>
      <SvgMock />
    </div>
    <ul
      className="actions"
    />
  </form>
</div>
`;

exports[`Form rendering with download URLs 1`] = `
<div
  className="form"
>
  <form
    onSubmit={[Function]}
  >
    <textarea
      autoFocus={true}
      name="expr"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="translate(Enter regular expression to display)"
    />
    <button
      type="submit"
    >
      <Trans>
        Display
      </Trans>
    </button>
    <div
      className="select"
    >
      <select
        name="syntax"
        onChange={[Function]}
        value="js"
      >
        <option
          key="js"
          value="js"
        >
          Javascript
        </option>
        <option
          key="pcre"
          value="pcre"
        >
          PCRE
        </option>
      </select>
      <SvgMock />
    </div>
    <ul
      className="actions"
    >
      <li
        key="0"
      >
        <a
          download="image.svg"
          href="#svg"
          type="image/svg+xml"
        >
          <SvgMock />
          <Trans>
            Download SVG
          </Trans>
        </a>
      </li>
      <li
        key="1"
      >
        <a
          download="image.png"
          href="#png"
          type="image/png"
        >
          <SvgMock />
          <Trans>
            Download PNG
          </Trans>
        </a>
      </li>
    </ul>
  </form>
</div>
`;

exports[`Form rendering with permalink URL 1`] = `
<div
  className="form"
>
  <form
    onSubmit={[Function]}
  >
    <textarea
      autoFocus={true}
      name="expr"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="translate(Enter regular expression to display)"
    />
    <button
      type="submit"
    >
      <Trans>
        Display
      </Trans>
    </button>
    <div
      className="select"
    >
      <select
        name="syntax"
        onChange={[Function]}
        value="js"
      >
        <option
          key="js"
          value="js"
        >
          Javascript
        </option>
        <option
          key="pcre"
          value="pcre"
        >
          PCRE
        </option>
      </select>
      <SvgMock />
    </div>
    <ul
      className="actions"
    >
      <li>
        <a
          href="#permalink"
        >
          <SvgMock />
          <Trans>
            Permalink
          </Trans>
        </a>
      </li>
    </ul>
  </form>
</div>
`;
